--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,10 @@ body {
     text-align: center;
 }
 
+.about h1{
+    color: var(--orange);
+}
+
 .skills {
     margin-top: 1.5rem;
     display: flex;
@@ -154,6 +158,7 @@ body {
     background: var(--orange);
     padding: 0.5rem 1rem;
     border-radius: 6px;
+    border: 2px solid #000;
 }
 
 /* CONTACT */
@@ -531,6 +536,17 @@ footer {
     margin: 2rem auto 0;   /* centers horizontally and adds top spacing */
     width: 150px;          /* adjust size as needed */
     max-width: 40%;
+}
+
+.about-text {
+    background: var(--yellow);
+    display: inline-block;
+    padding: 1.5rem 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    border: 2px solid #000;
+    font-size: 1.1rem;
+    line-height: 1.6;
 }
 
 .footer-logo {
